# keyburn

./: .gitignore  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  action.yml  keyburn.toml.example  pyproject.toml
.github/workflows/: adoption-loop.yml  ci.yml  keyburn-pr-smoke.yml  precision-benchmark.yml  release.yml
adoption/: README.md  targets.csv
benchmarks/: README.md  repos.csv
keyburn/: cli.py  config.py  entropy.py  history.py  patterns.py  playbooks.py  redact.py  rotate.py  sarif.py  scanner.py  verify.py
scripts/: adoption_loop.py  benchmark_precision.py
tests/: test_entropy.py  test_features.py  test_history.py  test_playbooks.py  test_rotate.py  test_scanner.py  test_verify.py
tests/smoke_pr/: sample.py
